# Thirteen

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  run_all.sh
front_end/: index.html  index.pug  package-lock.json  package.json  tsconfig.json
front_end/css/: style.css  style.css.map  style.scss
front_end/css/.sass-cache/36017ccadcb4dbbc1630776587d1040b32c42800/: style.scssc
front_end/js/: cards.js  client.js  debounce.js  tsconfig.json
front_end/js/legacy/: cards.js  client.js
front_end/js/src/ts/: cards.ts  client.ts  events.d.ts  events.ts  jquery.ts  utils.ts
front_end/public/: tsconfig.json
front_end/public/css/: style.css  style.css.map  style.scss
front_end/public/js/: cards.js  client.js  thirteen-api.js  utils.js
front_end/public/ts/: cards.ts  client.ts  thirteen-api.ts  utils.ts
front_end/src/: app.ts
front_end/views/: index.pug
legacy/: .gitignore  README.md
legacy/front_end/: package-lock.json  package.json  tsconfig.json
legacy/front_end/public/css/: style.css  style.css.map  style.scss
legacy/front_end/public/js/: utils.js
legacy/front_end/public/ts/: utils.ts  (+1 more)
legacy/front_end/src/: main.ts
legacy/front_end/views/: index.pug
legacy/src/: cards.rs  data.rs
src/: cards.rs  client.rs  close_reason.rs  data.rs  game.rs  main.rs  server.rs  utils.rs  ws.rs
src/server/: client.rs  game.rs  instance.rs  mod.rs
src/server_rw/: client.rs  game.rs  instance.rs  mod.rs
web/: package-lock.json  package.json  webpack.common.js
web/src/: index.html  index.scss  index.ts
web/src/game/: api.ts  cards.ts  utils.ts
(+1 files in other folders)
