[package]
name = "thirteen"
version = "0.1.0"
edition = "2021"

[dependencies]
# WebSocket implementation
actix = "0.12"
actix-rt = "2.6.0"
actix-web = "4.0.0-rc.2"
actix-web-actors = "4.0.0-beta.11"
actix-files = "0.6.0-beta.16"
# Logging capabilities
log = "0.4"
env_logger = "0.7"
# Universally unique identifiers
uuid = { version = "0.8.2", features = ["v4", "serde"] }
# Serialization framework
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }